--- a/accueil.html
+++ b/accueil.html
@@ -112,7 +112,7 @@
 <br>- Masterclasses avec des experts du cinéma sportif.<br>
 - Séances spéciales pour découvrir des films inspirants.<br>Découvrez le détail du programme et ne manquez aucune activité !
 <button>
-    <a class="btn btn--big" href="programme.html">voir</a>
+    <a class="btn-btn--big" href="programme.html">voir</a>
 </p></button>
 <h2 class="intro__title">invités</h2>
 <p class="intro__chapo">
