--- a/programme.html
+++ b/programme.html
@@ -147,7 +147,108 @@
                   </li>
                   <h3>les vagues du courage :
                     20 avril
-                  </h3>
-                  <p>genre : biographie</p>
+                  </h3> 
+                  <p>genre : biographie</p> 
           </nav> 
+        </div>
+            <h2>séances spéciales :</h2>
+            <nav class="header__carousel carousel" id="mainNav" aria-hidden="true">
+              <ul class="carousel__list list-unstyled">
+                <li class="carousel__item">
+                      <a href="#" aria-label="Avant-premières"
+                        ><img src="/assets/image 17.png" alt="Avant-premières"
+                      /></a>
+                    </li>
+                    <h3>Avant-premières
+                    </h3>
+                    <p> Soyez parmi les premiers à découvrir des films inédits en exclusivité.</p>
+                    <a href="#" aria-label="masterclass"
+                        ><img src="/assets/image 18.png" alt="masterclass"
+                      /></a>
+                    </li>
+                    <h3>masterclass
+                    </h3>
+                    <p>Apprenez des secrets du métier grâce à des sessions animées. e</p>
+                    <a href="#" aria-label="rencontrent"
+                        ><img src="/assets/image 19.png" alt="rencontrent"
+                      /></a>
+                    </li>
+                    <h3>rencontrent
+                    </h3>
+                    <p>Échangez avec les réalisateurs, acteurs et sportifs.</p>
+            </nav> 
+          </div>
+          <h2>activités annexes</h2>
+          <nav class="header__carousel carousel" id="mainNav" aria-hidden="true">
+            <ul class="carousel__list list-unstyled">
+              <li class="carousel__item">
+                    <a href="#" aria-label="ateliers"
+                      ><img src="/assets/image (1).png" alt="ateliers"
+                    /></a>
+                  </li>
+                  <h3>ateliers
+                  </h3>
+                  <p> Participez à des sessions interactives sur la réalisation de films.</p>
+                  <a href="#" aria-label="expositions"
+                      ><img src="/assets/image-.png" alt="expositions"
+                    /></a>
+                  </li>
+                  <h3>expositions
+                  </h3>
+                  <p> Admirez des photographies, œuvres d’art et objets uniques célébrant le sport.</p>
+                  <a href="#" aria-label="animations"
+                      ><img src="/assets/image.png" alt="animations"
+                    /></a>
+                  </li>
+                  <h3>animations
+                  </h3>
+                  <p>Vivez des expériences ludiques et immersives, idéales pour toute la famille.</p>
+          </nav> 
+        </div>
+    </main>
+    <section class="section">
+        <header class="section__header intro">
+          <h3 class="intro__title">programme du festival - 15 au 21 avril 2025</h3>
+          <p class="intro__chapo">
+            <strong>Mardi 15 avril</strong><br>
+17h00 : Ouverture des portes<br>
+18h00 - 22h00 : Soirée d’inauguration et projection d’ouverture<br>
+
+<br><strong>Mercredi 16 avril</strong><br>
+10h00 - 18h00 : Projections et rencontres<br>
+19h00 - 21h00 : Masterclass spéciale<br>
+
+<br><strong>Jeudi 17 avril</strong><br>
+10h00 - 16h00 : Ateliers interactifs
+<br>17h30 - 22h00 : Soirée thématique avec avant-premières<br>
+
+<br><strong>Vendredi 18 avril</strong><br>
+11h00 - 15h00 : Expositions et animations
+16h00 - 21h00 : Projections et échanges<br>
+
+<br><strong>Samedi 19 avril</strong><br>
+09h00 : Ouverture des portes
+<br>10h00 - 14h00 : Ateliers pour petits et grands
+15h00 - 22h00 : Projections spéciales et compétitions<br>
+
+<br><strong>Dimanche 20 avril</strong><br>
+09h00 : Ouverture des portes
+<br>10h00 - 12h30 : Matinée détente avec films familiaux
+14h00 - 19h00 : Projections et discussions<br>
+
+<br><strong>Lundi 21 avril</strong><br>
+10h00 : Ouverture des portes
+<br>11h00 - 13h00 : Cérémonie de remise des prix
+15h00 - 17h30 : Projection de clôture
+            </p>
+            <h3>telecharger le programme</h3>
+            <button>
+                <a class="btn btn--big" href="/">Achetez vos billets</a>
+            </button>
+
+        
+          
+  
+  
+
 
