--- a/accueil.html
+++ b/accueil.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo-link" href="/">
+      <a class="header__logo-link" href="accueil.html">
         <img
           class="header__logo"
           src="/assets/favicons/ICL0bKPJc41lYSXQ9IiFN 3.png"
@@ -112,7 +112,7 @@
 <br>- Masterclasses avec des experts du cinéma sportif.<br>
 - Séances spéciales pour découvrir des films inspirants.<br>Découvrez le détail du programme et ne manquez aucune activité !
 <button>
-    <a class="btn-btn--big" href="programme.html">voir</a>
+    <a class="btn btn--big" href="programme.html">voir</a>
 </p></button>
 <h2 class="intro__title">invités</h2>
 <p class="intro__chapo">
@@ -153,7 +153,7 @@
   </li>
         </header>
         </section>
-
+<footer class="footer">
         <section class="section-pieddepage">
           <header class="section__header">
             <h3 class="section__title">rejoins nous !</h3>
@@ -198,3 +198,7 @@
             </li>
           </header>
           </section>
+        </footer>
+      </main>
+    </body>
+  </html>
