--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,7 @@
         <br>cavatrailer@gmail.com
         <br>90000 Belfort
     </p>
+    <footer class="footer">
     <section class="section-pieddepage">
         <header class="section__header">
           <h3 class="section__title">rejoins nous !</h3>
@@ -156,3 +157,7 @@
           </li>
         </header>
         </section>
+    </footer>
+</main>
+</body>
+</html>
