--- a/info-pratique.html
+++ b/info-pratique.html
@@ -127,6 +127,7 @@ Pour le transport, Belfort est desservie par la gare TGV Belfort-Montbéliard et
 
 Pour toute autre question, contactez-nous directement.
           </p>
+          <footer class="footer">
           <section class="section-pieddepage">
             <header class="section__header">
               <h3 class="section__title">rejoins nous !</h3>
@@ -171,4 +172,8 @@ Pour toute autre question, contactez-nous directement.
               </li>
             </header>
             </section>
+        </footer>
+    </main>
+  </body>
+</html>
 
