--- a/invités.html
+++ b/invités.html
@@ -124,6 +124,10 @@ Découvrez les talents derrière "Ça va trai'ler", où cinéma et sport se rejo
             </p>
         </div>
     </main>
+    <footer class="footer">
+        <section class="section-pieddepage">
+            <header class="section__header">
+              <h3 class="section__title">rejoins nous !</h3>
     <div class="email-container">
         <input type="email" class="email-input" placeholder="Entrez votre email">
         <button class="submit-btn">S'inscrire</button>
@@ -164,6 +168,10 @@ Découvrez les talents derrière "Ça va trai'ler", où cinéma et sport se rejo
             </li>
           </header>
           </section>
+        </footer>
+    </main>
+  </body>
+</html>
 
 
 
