--- a/a-propos.html
+++ b/a-propos.html
@@ -93,6 +93,7 @@
        <h2 class="hero__title hero__title--home">a propos</h2>
        <p class="hero__chapo">
         Le festival "Ça va traïler", créé en 2015, célèbre le sport, la nature et le dépassement de soi à travers des rencontres entre athlètes, artistes et passionnés. Organisé par une équipe engagée et soutenu par des bénévoles, il promeut des valeurs d’inclusion, de respect de l’environnement et de créativité. Chaque édition, dont la thématique 2025 est "La Nature comme partenaire d’excellence", invite à partager des expériences uniques et à sensibiliser à la préservation des espaces naturels.
+        <footer class="footer">
         <section class="section-pieddepage">
             <header class="section__header">
               <h3 class="section__title">rejoins nous !</h3>
@@ -137,4 +138,8 @@
               </li>
             </header>
             </section>
+        </footer>
+    </main>
+  </body>
+</html>
 
