--- a/film.html
+++ b/film.html
@@ -34,7 +34,8 @@
         aria-label="menu"
         aria-expanded="false"
         aria-controls="mainNav"
-      >
+        <button class="menu-toggle-btn" aria-expanded="false">☰</button>
+      
         <span class="menu-btn__bar" aria-hidden="true"></span>
       </button>
 
