--- a/accueil.html
+++ b/accueil.html
@@ -200,7 +200,7 @@
               /></a>
             </li>
             <li class="pieddepage__item">
-              <a class="pieddepage__link2" href="mentionslegal.html">mentionslegal</a>
+              <a class="pieddepage__link2" href="mentionslegal.html">mentions legale</a>
             </li>
           </header>
           </section>
