--- a/film.html
+++ b/film.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo-link" href="/">
+      <a class="header__logo-link" href="accueil.html">
         <img
           class="header__logo"
           src="/assets/favicons/ICL0bKPJc41lYSXQ9IiFN 3.png"
