--- a/a-propos.html
+++ b/a-propos.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="./src/js/script.js"></script>
+
     <div class="hero hero--home">
        <h2 class="hero__title hero__title--home">a propos</h2>
        <p class="hero__chapo">
