--- a/billeterie.html
+++ b/billeterie.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="/src/js/script.js"></script>
+
     <div class="hero hero--home">
         <img class="hero__img" src="/assets/image 13.png" alt="" />
        <h1 class="hero__title hero__title--home">billetterie-festival 2025</h1>
