--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="/src/js/script.js"></script>
+
 <form class="contact-form" action="#" method="POST">
     <h1>contact</h1>
     <label for="nom">Nom</label>
