--- a/film.html
+++ b/film.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="/src/js/script.js"></script>
+
     <main>
         <div class="hero hero--home">
           <h1 class="hero__title hero__title--home">film</h1>
