--- a/info-pratique.html
+++ b/info-pratique.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="/src/js/script.js"></script>
+
     <div class="hero hero--home">
          <img class="hero__img" src="/assets/image 1.png" alt="" />
         <h2 class="hero__title hero__title--home">lieu et date</h2>
