--- a/programme.html
+++ b/programme.html
@@ -90,6 +90,8 @@
         </div>
       </nav>
     </header>
+    <script src="/src/js/script.js"></script>
+
 
     <main>
         <div class="hero hero--home">
